Changes in version 1.3.2
----------------------------
* Date: 2018-05-31
* add R_LIBS_USER="~/R/UserPackages" into 'Rprofile()' examples ^_^


Changes in version 1.3.1
----------------------------
* Date: 2018-04-29
* add 'Renviron()' function to prevent it from forgetting ^_^
* add 'Rprofile()' function to prevent it from forgetting ^_^
* add 'updatePackagesALL()' function copied from 'rvcheck' package


Changes in version 1.2.2
----------------------------
* Date: 2018-04-28
* add 'pathR()' function to prevent it from forgetting ^_^
* add 'ggthemes' package to 'install.gg.series()' function


Changes in version 1.2.0 
----------------------------
* Date: 2018-04-26
* update the 'install.all()' function
* add 'asbio' package to 'install.data.analysis()' function
* add 'ggplotify' package to 'install.gg.series()' function
* create 'install.github.PhDMeiwp()' function, which contains 'basicANCOVA', 'basicTrendline', 'Steel.Dwass.test', 'circos.JCR', and 'prettyB' packages
* create 'install.others()' function, which contains 'rvcheck' package
* deleted 'install.basicANCOVA()', and 'install.Steel.Dwass.test()' functions

Changes in version 1.1.0 
----------------------------
* Date: 2018-04-10
* create this R package named 'basicPackages'