@@ -1,7 +1,8 @@
 Changes in version 1.3.2
 ----------------------------
 * Date: 2018-05-31
-* add R_LIBS_USER="~/R/UserPackages" into 'Rprofile()' examples ^_^
+* add R_LIBS_USER="~/R/UserPackages" into 'Rprofile()' examples
+* add "R11" package into 'install.github.PhDMeiwp()' function
 
 
 Changes in version 1.3.1
